--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs: # a basic unit of work in a run
       - run:
           # compress Xcode's build output so that it can be stored as an artifact
           name: Compress app for storage
-          command: zip -r app.zip build/Release/asimplerenamescript.app
+          command: zip -r app.zip 'build/Release/Drop Rename All.app'
       - store_artifacts: # store this build output. Read more: https://circleci.com/docs/2.0/artifacts/
           path: app.zip
           destination: app
